# text-to-image

./: .gitignore  Makefile  PROJECT.md  README.md  intro.md  main.py  myst.yml  pyproject.toml
.github/workflows/: deploy-book.yml
notebooks/: 01_flow_matching_basics.ipynb  02_diffusion_transformer.ipynb  03_class_conditioning.ipynb  04_text_conditioning.ipynb  05_latent_diffusion.ipynb
opticus/: __init__.py  dit.py  flow.py  models.py  sampling.py  train.py
text_to_image/: __init__.py  dit.py  sampling.py  text_encoder.py  train.py  vae.py
