[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-to-image"
version = "0.1.0"
description = "Educational project for understanding text-to-image generation with Flow Matching and DiT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "numpy>=1.24",
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "jupyter-book>=1.0,<2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
rocm = [
    "torch>=2.5.0; sys_platform == 'linux'",
    "torchvision>=0.20; sys_platform == 'linux'",
    "pytorch-triton-rocm; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

# PyTorch backend configuration
# By default, uses PyPI torch (CUDA on Linux, CPU elsewhere)
# For AMD GPUs (Linux only): uv sync --extra rocm
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
# When rocm extra is requested, get torch from ROCm index on Linux
torch = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
